argocd/media/transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: transmission
  name: transmission
  namespace: media
spec:
  selector:
    matchLabels:
      app: transmission
  replicas: 1
  strategy:
    type: Recreate

  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
        - name: transmission
          image: haugene/transmission-openvpn
          ports:
            - containerPort: 9091
#          volumeMounts:
#            - mountPath: /data
#              name: data
#            - mountPath: /config
#              name: config
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN

#      volumes:
#        - name: data
#          persistentVolumeClaim:
#            claimName: data-transmission-pvc
#        - name: config
#          persistentVolumeClaim:
#            claimName: config-transmission-pvc
