argocd/media/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: transmission-svc
  namespace: media
spec:
  selector:    
    app: transmission
  type: ClusterIP
  ports:  
  - name: http
    port: 9091
    targetPort: 9091
    protocol: TCP
