argocd/media/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: media
  name: transmission-ingress
  annotations:
    nignx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - transmission.alex-j-butler.com
    secretName: transmission-int-tls
  rules:
  - host: transmission.alex-j-butler.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: transmission-svc
            port:
              number: 9091
